--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,25 +27,40 @@ jobs:
   basic-test:
     runs-on: ubuntu-latest
     outputs:
-      points: ${{ steps.end.outputs.points}}
+      points: ${{ steps.end.outputs.points }}
     container:
       image: duskmoon/dev-env:rcore-ci
     steps:
       - uses: actions/checkout@v4
-      - name: Run tests
+      - name: Set up environment
         run: |
+          set -x  # Enable command trace
           qemu-system-riscv64 --version
           rustup target add riscv64gc-unknown-none-elf
           git config --global --add safe.directory /__w/${{ github.event.repository.name }}/${{ github.event.repository.name }}
+      - name: Clone repositories
+        run: |
+          set -x  # Enable command trace
           git clone https://github.com/LearningOS/rCore-Tutorial-Checker-2024S.git ci-user
           git clone https://github.com/LearningOS/rCore-Tutorial-Test-2024S.git ci-user/user
-          ID=`git rev-parse --abbrev-ref HEAD | grep -oP 'ch\K[0-9]'`
-          # cd ci-user && make test CHAPTER=$ID passwd=${{ secrets.BASE_TEST_TOKEN }}
-          cd ci-user && make test CHAPTER=$ID passwd=${{ secrets.BASE_TEST_TOKEN }} > ../output.txt
+      - name: Determine chapter ID
+        id: get_id
+        run: |
+          set -x  # Enable command trace
+          ID=$(git rev-parse --abbrev-ref HEAD | grep -oP 'ch\K[0-9]')
+          echo "ID=$ID" >> $GITHUB_ENV
+      - name: Run tests
+        run: |
+          set -x  # Enable command trace
+          cd ci-user
+          echo "Running make test with CHAPTER=$ID and passwd=${{ secrets.BASE_TEST_TOKEN }}"
+          make test CHAPTER=$ID passwd=${{ secrets.BASE_TEST_TOKEN }} > ../output.txt || { echo "make test failed"; exit 1; }
+          echo "Test completed"
           cat ../output.txt
       - name: end
         id: end
         run: |
+          set -x  # Enable command trace
           cat output.txt | grep -a "Test passed" | grep -oP "\d{1,}/\d{1,}" | xargs -i echo "points={}"
           cat output.txt | grep -a "Test passed" | grep -oP "\d{1,}/\d{1,}" | xargs -i echo "points={}" >> $GITHUB_OUTPUT
   gitlab-mirror:
